bin/testsuite/tests/compiler/src/errors/compiler5554.swg
#global testerror "Err0040"
#test
{
    const const a = 0
}